fix userpage on small screen

--- a/frontEnd/src/Components/UserForm/userForm.css
+++ b/frontEnd/src/Components/UserForm/userForm.css
@@ -4,6 +4,7 @@
     padding: 20px 80px;
     margin-top: 50px;
     gap: 5rem;
+    background-color: var(--main-background-color)
 }
 
 /* reports styling (left section)*/
@@ -159,7 +160,7 @@
     .user-container {
         display: grid;
         grid-template-columns: 1fr;
-        padding: 20px 10vw;
+        padding:0;
         align-items: center;
         gap: 5rem;
     }
